--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <h1>
         Your Name: Ayushman Shukla <br>
-        Father's Name: Rajeesh Kumar Shukla <br>
+        Father's Name: Rajesh Kumar Shukla <br>
         Mother's Name: Suneeta Shukla
     </h1>
     
