Fix typo in Semester 1 Subject heading

--- a/experiment1.html
+++ b/experiment1.html
@@ -13,7 +13,7 @@
     <h1>Introduction</h1>
     <p>The <b>Bechlor of Technology in Computer Science</b> is designed to provide student with
          <i>strong foundation  </i>in computer science, software enginnering, and <u>emerging technologys.</u> </p>
-    <h1> Semester 1 Sublect (Ordered List)</h1>
+    <h1> Semester 1 Subject (Ordered List)</h1>
     <ol>
         <li>Mathematics-1</li>
         <li>Physics</li>
