--- a/experiment1.html
+++ b/experiment1.html
@@ -6,84 +6,82 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 align="center">
-        B.Tech Computer Science - Course Curriculum</h1>
-    <h6 align="center">Session; 2025-2029 @ ABES Enginnering College Ghaziabad</h6>
-    <hr>
-    <h1>Introduction</h1>
-    <p>The <b>Bechlor of Technology in Computer Science</b> is designed to provide student with
-         <i>strong foundation  </i>in computer science, software enginnering, and <u>emerging technologys.</u> </p>
-    <h1> Semester 1 Subject (Ordered List)</h1>
-    <ol>
-        <li>Mathematics-1</li>
+    <h1 align="center"> B.Tech Computer Science - Course Curriculum</h1>
+<h6 align="center"> Session: 2025-2029 © ABES Engineering College Ghaziabad</h6>
+<hr>
+<h1>Introduction</h1>
+<p>The<b>Bachelor of Technology in Computer Science</b> is designed to provide students with <i>strong foundations</i> in computer science, software engineering,and <u>emerging technologies</u>
+<br/>
+<h1>Semester 1 Subjects ( Ordered list)</h1>
+<ol>
+ <li>Mathematics-1</li>
         <li>Physics</li>
         <li>Basic Electrical Enginnering </li>
         <li>Programming in C</li>
         <li>Web Designing Workshop-1</li>
         <li>Essential of AI</li>
-    </ol>
-    <h1>Programming Language Covered(Unordered List)</h1>
-    <ul>
+</ol>
+<h1>Programming Languages Covered (Unordered list)</h1>
+  <ul>
         <li>C</li>
         <li>C++</li>
         <li>Java</li>
         <li>Python</li>
         <li>Java Script</li>
     </ul>
-    <h1>Key Terms (Nested List)</h1>
-    <ul>
-        <li>Artificial Intelligence</li>
-            <ol>
-                <li>Machine Learning</li>
-                <li>Deep Learning</li>
-             </ol>
-        <li>Data Science</li>
-        <ol>
-            <li>Statistics</li>
-            <li>Data Visualization</li>
-        </ol>    
-    </ul>
-    <h1> Key Term (Description List)</h1>
-    <p> <b>AI</b> - Airtificial Intelligence, the study of intelligent machines.
-        <br>
-        <br>
-    <b>DBMS</b> - Database MAnagement System, software to handle databases.
-       <br>
-       <br>
-    <b>OS</b> - Operating System, software managing hardware resoureces.</p>
+<h1>Key Terms (Nested List)</h1>
+<ul>
+<li>Artificial Intelligence</li>
+<ol>
+<li>Machine Learning</li>
+<li>Deep Learning</li>
+</ol>
+<li>Data Science</li>
+<ol>
+<li>Statistics</li>
+<li>Data Visualization</li>
+</ol>
+</ul>
+<h1>Key Terms (Description List)</h1>
 
-    <h1>Elective Subject (Nested List)</h1>
-    <ul>
-        <li>Artificial Intelligence
-            <ol>
-                <li>Machine Learning</li>
-                <li>Deep Learning</li>
-            </ol>
-        </li>
-        <li>Data Structure
-            <ol>
-                <li>Statistics</li>
-                <li>Data Visualization</li>
-            </ol>
-        </li>
-    </ul>
+<dl>
+  <dt><b>AI</b></dt>
+  <dd>Artificial Intelligence, the study of intelligent machines.</dd>
+  
+  <dt>DBMS</dt>
+  <dd>Database Management System, software to handle databases.</dd>
+  
+  <dt>OS</dt>
+  <dd>Operating System, software managing hardware resources.</dd>
+</dl>
 
-    <h1>Lab Curriculum (Mixed List)</h1>
-    <ol>
-        <li>Programming Labs
-            <ul>
-                <li type="circle">C Lab</li>
-                <li type="circle">Python Lab</li>
-            </ul>
-        </li>
-        <li>Electronics Labs
-            <ul>
-                <li type="circle">Digital Electronics Lab</li>
-                <li type="circle">Microprocessor Lab</li>
-            </ul>
-        </li>
-    </ol>
-
-
+<h1>Elective Subjects (Nested List) </h1>
+<ul>
+<li>Artificial Intelligence</li>
+<ol>
+<li>Machine Learning</li>
+<li>Deep Learning</li>
+</ol>
+<li>Data Science</li>
+<ol>
+<li>Statistics</li>
+<li>Data Visualization</li>
+</ol>
+</ul>
+<h1>Lab Curriculum (Mixed List)</h1>
+<ol>
+<li>Programming Labs</li>
+<ul>
+<li>C lab</li>
+<li>Python Lab</li>
+</ul>
+<li>Electronics Labs</li>
+<ul>
+<li>Digital Electronic Lab</li>
+<li>Microprocessor Lab</li>
+</ul>
+</ol>
+<hr>
+<h4 align="center"> © 2025 Curriculum Design ® University of Learning</h4>
 </body>
 </html>
