Updated HTML file with latest changes

--- a/experiment3.html
+++ b/experiment3.html
@@ -6,10 +6,9 @@
     <title>Experiment 3</title>
 </head>
 <body>
-    <h2>OUTPUT : </h2>
     <table border = "5">
         <caption><strong>Colllege Timetable - CSE Department</strong></caption>
-        <tr>
+        <tr>git push
             <th>Day/Time</th>
             <th>9:00-10:00</th>
             <th>10:00-11:00</th>
