--- a/experiment4.html
+++ b/experiment4.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <h1>Output :</h1>
- <form action="/sumbit_form" method="post" style="border: 2px solid #333; padding:20px; border-radius: 10px; width: 400px; margin: 0 auto; text-align:center;">
+ <form action="/submit_form" method="post" style="border: 2px solid #333; padding:20px; border-radius: 10px; width: 400px; margin: 0 auto; text-align:center;">
    <h2 style="text-align: center;">Hotel Room Booking Form</h2>
     <label for="fullname">Full Name:</label>
     <input type="text" id="fullname" name="fullname" required><br><br>
