--- a/experiment2.html
+++ b/experiment2.html
@@ -12,7 +12,7 @@
         <h1 align="center">Global Daily News</h1>
         <p align="center">Your Trusted Source for Latest Updates</p>
         <hr>
-        <nav align="center">
+        <nav align="center"> <!--center-align the content inside the tag.-->
             <a href="#world">World</a>
             <a href="#sports">Sports</a>
             <a href="#entertainment">Entertainment</a>
