--- a/experiment6.html
+++ b/experiment6.html
@@ -63,7 +63,7 @@
 <body>
   <h1>My E-commerce Store</h1>
   <div class="product-card">
-    <img src="shirt.jpg" alt="Stylish T-Shirt">
+    <img src="tshirt.jpg" alt="Stylish T-Shirt">
     <h2>Stylish T-Shirt</h2>
     <p class="description">A comfortable cotton t-shirt perfect for casual wear.</p>
     <p class="price">Price: ₹499</p>
