--- a/experiment8.html
+++ b/experiment8.html
@@ -93,26 +93,34 @@
     <div class="cards-row">
 
       <div class="card">
-        <div class="badge">JK</div>
-        <div class="name">Jeet Kumar</div>
+        <div class="badge">BY</div>
+        <div class="name">ayush 3</div>
         <div class="meta">B.Tech - CSE</div>
-        <div class="meta">Roll No: 21CS1007</div>
+        <div class="meta">Roll No: 2025b01010144</div>
         <div class="muted">1st Year</div>
       </div>
 
       <div class="card">
-        <div class="badge">AR</div>
-        <div class="name">Asha Rani</div>
-        <div class="meta">B.Tech - IT</div>
+        <div class="badge">BV</div>
+        <div class="name">ayush 2</div>
+        <div class="meta">B.Tech - CSE </div>
         <div class="meta">Roll No: 21IT1012</div>
         <div class="muted">1st Year</div>
       </div>
 
       <div class="card">
-        <div class="badge">RK</div>
-        <div class="name">Rohit Kumar</div>
-        <div class="meta">B.Tech - ECE</div>
+        <div class="badge">BC</div>
+        <div class="name">ayush</div>
+        <div class="meta">B.Tech - CSE</div>
         <div class="meta">Roll No: 21EC1009</div>
+        <div class="muted">1st Year</div>
+      </div>
+      
+       <div class="card">
+        <div class="badge">AS</div>
+        <div class="name">Ayushman shukla</div>
+        <div class="meta">B.Tech - CSE</div>
+        <div class="meta">Roll No: 21IT1012</div>
         <div class="muted">1st Year</div>
       </div>
 
