--- a/experiment8.html
+++ b/experiment8.html
@@ -93,7 +93,7 @@
     <div class="cards-row">
 
       <div class="card">
-        <div class="badge">BY</div>
+        <div class="badge">AY</div>
         <div class="name">ayush 3</div>
         <div class="meta">B.Tech - CSE</div>
         <div class="meta">Roll No: 2025b01010144</div>
@@ -101,7 +101,7 @@
       </div>
 
       <div class="card">
-        <div class="badge">BV</div>
+        <div class="badge">AV</div>
         <div class="name">ayush 2</div>
         <div class="meta">B.Tech - CSE </div>
         <div class="meta">Roll No: 21IT1012</div>
@@ -109,7 +109,7 @@
       </div>
 
       <div class="card">
-        <div class="badge">BC</div>
+        <div class="badge">AC</div>
         <div class="name">ayush</div>
         <div class="meta">B.Tech - CSE</div>
         <div class="meta">Roll No: 21EC1009</div>
