--- a/experiment2.html
+++ b/experiment2.html
@@ -13,7 +13,7 @@
         <p align="center">Your Trusted Source for Latest Updates</p>
         <hr>
         <nav align="center"> <!--center-align the content inside the tag.-->
-            <a href="#world">World</a>
+            <a href="#world">Worlds</a>
             <a href="#sports">Sports</a>
             <a href="#entertainment">Entertainment</a>
             <a href="#podcast">Podcast</a>
